# ansible-development-kit

./: .gitlab-ci.yml  .travis.yml  AUTHORS  Pipfile  README.md  cookiecutter.json  pyproject.toml
ansible-role-{{cookiecutter.role_name}}/: .editorconfig  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  pyproject.toml
ansible-role-{{cookiecutter.role_name}}/molecule/aws/: cleanup.yml  converge.yml  create.yml  destroy.yml  molecule.yml
ansible-role-{{cookiecutter.role_name}}/molecule/default/: cleanup.yml  converge.yml  molecule.yml  playbook.yml  prepare.yml
ansible-role-{{cookiecutter.role_name}}/molecule/resources/templates/: proxy.sh.j2
ansible-role-{{cookiecutter.role_name}}/molecule/vagrant-vbox/: cleanup.yml  molecule.yml  prepare.yml
docs/: index.md
